hphp/test/slow/traits/diamond_use/diamond_use_no_attribute_1.php.expectf
Fatal error: Method 'foo' declared in multiple traits (T1, T2) in %s/diamond_use_no_attribute_1.php on line 14
